@@ -6,7 +6,7 @@
 <body>
 	<table>
 	<tr>
-	<td style="vertical-align:top;align:left;">
+	<td style="vertical-align:top;">
 		<ul>
 			<li>Overview</li>
 			<li><a href="mainwindow.html">Main Window</a></li>
