@@ -4,13 +4,29 @@
 <title>QMidiPlayer Help</title>
 </head>
 <body>
+	<table>
+	<tr>
+	<td style="vertical-align:top;">
+		<ul>
+			<li><a href="index.html">Overview</a></li>
+			<li>Main Window</li>
+			<li>Channels Dialog</li>
+			<li>Channel Editor</li>
+			<li>Playlist</li>
+			<li>Effects</li>
+			<li>Settings</li>
+			<li><a href="version.html">Version Info.</a></li>
+			<li><a href="license.html">License</a></li>
+		</ul>
+	</td>
+	<td>
 	<h1>Main Window</h1>
 	<img src="../img/mainw.png"><br>
 	<ul>
 		<li>1. Now playing. Right clicking here will bring up the <a href="#fileop"> file operation menu</a>.</li>
 		<li>2. Playing control slider. The total playing time is estimated and isn't 100% accurate.</li>
 		<li>3. Playing control buttons.</li>
-		<li>4. Settings button.</li>
+		<li>4. Settings button. Read the Settings section for details.</li>
 		<li>5. Dialog toggle buttons.</li>
 		<li>6. Master gain slider.</li>
 		<li>7. Polyphone indicator.</li>
@@ -19,8 +35,12 @@
 	<h3><a name="fileop">File operation menu</a></h3>
 	<ul>
 		<li>File Information.</li>
-		<li>Render to Wave.</li>
+		<li>Render to Wave.<br>
+		It's not possible to use this action unless the player is stopped.<br>
+		The output wave file, with the name (source file name)+'.wav', <br>
+		is always placed in the folder that the source midi file is in.</li>
 	</ul>
 	<br><a href="index.html">Return</a>
+	</td>
 </body>
 </html> 
