@@ -4,6 +4,22 @@
 <title>QMidiPlayer Help</title>
 </head>
 <body>
+	<table>
+	<tr>
+	<td style="vertical-align:top;">
+		<ul>
+			<li><a href="index.html">Overview</a></li>
+			<li><a href="mainwindow.html">Main Window</a></li>
+			<li>Channels Dialog</li>
+			<li>Channel Editor</li>
+			<li>Playlist</li>
+			<li>Effects</li>
+			<li>Settings</li>
+			<li>Version Info.</li>
+			<li><a href="license.html">License</a></li>
+		</ul>
+	</td>
+	<td>
 	<h1>Version information</h1>
 	<div style="text-align:center;">
 		<img src="../img/qmidiplyr.png"><br>
@@ -14,5 +30,8 @@
 		Qt version: RT_QT_VERSION_STR (Built against CT_QT_VERSION_STR)<br>
 	</div><br>
 	<a href="index.html">Return</a>
+	</td>
+	</tr>
+	</table>
 </body>
 </html>
